fix: Prevent layout shift when hamburger menu gets hydrated

--- a/site/static/styles/manual.css
+++ b/site/static/styles/manual.css
@@ -100,6 +100,7 @@ code {
 
 #hamburgerToggle {
 	display: none;
+	visibility: hidden;
 	justify-self: left;
 }
 
@@ -122,8 +123,12 @@ code {
 		max-width: 600px;
 	}
 
-	#hamburgerToggle.hydrated {
+	#hamburgerToggle {
 		display: block;
+	}
+
+	#hamburgerToggle.hydrated {
+		visibility: visible;
 		background-color: transparent;
 		border: none;
 		padding: 0;
